--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -20,5 +20,4 @@ jobs:
         with:
           python-version: '3.12'
       - name: Run tests
-        run: python -m  unittest .\tests\test_app.py
-
+        run: python -m unittest tests/test_app.py
